--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,8 +42,9 @@
 
     <div class="text-center">
         <br/>
+        <hr />
         <p>
-            T-Schedule is an online scheduling helper that aims to make life easier for Georgia Tech students!
+            T-Schedule is an online scheduling helper that aims to make life easier for Georgia Tech students!  <a href="/contact">Contact us!</a>
         </p>
     </div>
 
