--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -6,6 +6,39 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.0.0/bootstrap-social.min.css" rel="stylesheet">
 
   <script src="https://use.fontawesome.com/190e87c6e2.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+
+  <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.0.3/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase-database.js"></script>
+  <script>
+    var config = {
+      apiKey: "AIzaSyBI42nd8krKQuOxMvRaGYLy0IbgdVRhnrs",
+      authDomain: "helloworld-73694.firebaseapp.com",
+      databaseURL: "https://helloworld-73694.firebaseio.com",
+      storageBucket: "helloworld-73694.appspot.com",
+      messagingSenderId: "72134407615"
+    };
+    firebase.initializeApp(config);
+  </script>
+  <script src="javascripts/angularSchedule.js"></script>
+
+  <script>
+      var auth = firebase.auth();
+      var user = auth.currentUser;
+      console.log(user);
+      auth.onAuthStateChanged(function(user) {
+        if (user) {
+            alert("Logged in!");
+        } else {
+            window.location.href = "/";
+        }
+      });
+  </script>
+
+
 </head>
 <body ng-app="tschedule" ng-controller="ScheduleCtrl">
     <div class="text-center">
