--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,6 +20,31 @@ a {
     box-shadow: 0 8px 6px -6px #999;
 }
 
+.centered {
+    display: flex;
+    justify-content: center;
+}
+
+.right-justified {
+    float: right;
+    /*display: flex;
+    justify-content: flex-end;*/
+}
+
+.nav-pills > li > p {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.nav-pills > li > a, .nav-pills > li > a:hover, .nav-pills > li > a:focus {
+    color: black;
+}
+
+.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
+    background-color: #00254c;
+    color: #eeb211;
+}
+
 .form-signin {
   max-width: 330px;
   padding: 15px;
