--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -23,26 +23,36 @@
     };
     firebase.initializeApp(config);
   </script>
+
   <script>
       var auth = firebase.auth();
       auth.onAuthStateChanged(function(user) {
-        if (user) {
-            alert("Logged in!");
-        } else {
+        if (!user) {
             window.location.href = "/";
         }
       });
   </script>
+  <script src="javascripts/angularSchedule.js"></script>
 </head>
 
-<body>
+<body ng-app="tschedule" ng-controller="ScheduleCtrl">
     <div class="text-center">
         <div class="page-header" style="margin: 0px; background: #00254c;">
+            <br />
             <h1 style="margin-top: 0px;">
-                <span class="glyphicon glyphicon glyphicon-th-list" style="color: #eeb211; margin: 20px"></span> <br/>
                 <a href="/"><font color="#eeb211">T-Schedule</font></a>
             </h1>
         </div>
+    </div>
+
+    <ul class="nav nav-pills centered test">
+      <li role="presentation"><a href="/user">Profile</a></li>
+      <li role="presentation" class="active"><a href="#">Schedule</a></li>
+      <li role="presentation"><a href="#">Forums</a></li>
+      <li role="presentation"><a href="#" ng-click="signout()">Sign out</a></li>
+    </ul>
+
+    <div class="text-center">
         <h1>Schedule!</h1>
 
         <br/>
