Small gap between fields in forgot password

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,8 +93,9 @@
 	<script type="text/ng-template" id="/forgotPassword.ejs">
 		<div class="container">
 			<form class="form-signin" ng-submit="forgotPassword()">
-				<input type="text" name="Email" value="" class="form-control input-lg" placeholder=" Type your Email Address" required autofocus ng-model="email"/>
-				<button class="btn btn-lg btn-primary btn-block signup-btn" type="submit" style="background: #00254c; color: #eeb211">Send Email</button>
+                <h2 class="form-signin-heading">Forgot Password?</h2>
+				<input type="text" name="Email" value="" class="form-control input-lg" placeholder="Type your Email Address" required autofocus ng-model="email"/>
+				<button class="btn btn-lg btn-primary btn-block signup-btn" type="submit" style="background: #00254c; color: #eeb211; margin-top: 10px">Send Email</button>
 			</form>
 		</div>
 	</script>
