--- a/views/user.ejs
+++ b/views/user.ejs
@@ -44,6 +44,7 @@
   <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase-storage.js"></script>
   <script>
     var config = {
       apiKey: "AIzaSyBI42nd8krKQuOxMvRaGYLy0IbgdVRhnrs",
