--- a/views/forum.ejs
+++ b/views/forum.ejs
@@ -4,6 +4,7 @@
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="/stylesheets/style.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.0.0/bootstrap-social.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/angular.ng-notify/0.6.0/ng-notify.min.css" rel="stylesheet">
 
   <script src="https://use.fontawesome.com/190e87c6e2.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
@@ -13,6 +14,7 @@
   <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase-database.js"></script>
+  <script src="https://cdn.jsdelivr.net/angular.ng-notify/0.8.0/ng-notify.min.js"></script>
   <script>
     var config = {
       apiKey: "AIzaSyBI42nd8krKQuOxMvRaGYLy0IbgdVRhnrs",
@@ -35,7 +37,7 @@
   <script src="javascripts/angularForum.js"></script>
 </head>
 
-<body ng-app="tschedule" ng-controller="ScheduleCtrl">
+<body ng-app="tschedule" ng-controller="ForumCtrl">
     <div class="text-center">
         <div class="page-header" style="margin: 0px; background: #00254c;">
             <br />
