--- a/views/forum.ejs
+++ b/views/forum.ejs
@@ -6,9 +6,10 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.0.0/bootstrap-social.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/angular.ng-notify/0.6.0/ng-notify.min.css" rel="stylesheet">
 
+
   <script src="https://use.fontawesome.com/190e87c6e2.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
   <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.0.3/firebase.js"></script>
   <script src="https://www.gstatic.com/firebasejs/3.4.0/firebase-app.js"></script>
@@ -54,20 +55,79 @@
       <li role="presentation"><a href="#" ng-click="signout()">Sign out</a></li>
     </ul>
 
-    <div class="text-center">
-        <h1>Write Comments Below!</h1>
-		<form>
-			<textarea ng-model="textComment" placeholder="Your Comment" style='width:550px;height:90px'></textarea>
-            <button style='margin-top:10px;' ng-click="postComment()">Write your Comment</button>
-        </form>
+    <ui-view></ui-view>
 
-		<h4 class="text-center" style="font-size: 18pt">Previous Comments</h4>
-        <ul>
-			<li ng-repeat="comment in comments"> {{comment}} : {{user.displayName}} <a  style="float: right;" href=""></a></li>
-        </ul>
-        <p>
-            T-Schedule is an online scheduling helper that aims to make life easier for Georgia Tech students! <a href="/contact">Contact us!</a>
-        </p>
-    </div>
+    <script type="text/ng-template" id="/forum.ejs">
+        <div class="container text-center">
+            <h1>{{ classInfo.fullname }}</h1>
+            <div class="row">
+                <div class="col-md-6">
+                    <h4><a href="" ng-click="prereq=!prereq">Click for Prerequisites</a></h4>
+                    <table ng-show="prereq" class="table table-condensed table-hover">
+                      <tbody>
+                        <tr ng-repeat="prereq in classInfo.prerequisites.courses">
+                          <td>{{prereq}} , type: {{classInfo.prerequisites.type}}</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                </div>
+                <div class="col-md-6">
+                    <h4><a href="" ng-click="req=!req">Click for Required Bys</a></h4>
+                    <table ng-show="req" class="table table-condensed table-hover">
+                      <tbody>
+                        <tr ng-repeat="req in classInfo.requisites.courses">
+                          <td>{{req}}</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                </div>
+            </div>
+            <form class="form-signin" ng-submit="postComment()" style="max-width: 100%;">
+              <h3 class="form-signin-heading">Comments!</h3>
+              <div class="row">
+                  <div class="col-md-6 col-md-offset-2">
+                      <input type="text" name="commentBox" value="" class="form-control input-lg" placeholder="Write your comment here" required autofocus ng-model="textComment"/>
+                  </div>
+                  <div class="col-md-2">
+                      <button class="btn btn-primary btn-block signup-btn" type="submit" style="background: #00254c; color: #eeb211; margin-top: 1rem">Submit</button>
+                  </div>
+              </div>
+            </form>
+            <div ng-show="!comments.length" class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="alert alert-info" role="alert">Start the discussion - be the first to comment!</div>
+                </div>
+            </div>
+        </div>
+
+        <div ng-show="comments.length" class="container" ng-repeat="comment in comments | orderBy: '-upvotes'">
+            <div class="row" style="margin-top: 15px">
+                <div class="col-md-1 col-md-offset-2">
+                    <img ng-src="{{comment.authorPhotoURL}}" style="max-width: 50px; max-height: 50px; margin-left: 15px" />
+                </div>
+                <div class="col-md-9">
+                    {{comment.upvotes}} <strong>{{comment.authorDisplayName}}</strong> <small class="text-muted">{{comment.postedOn}}</small> <a href="" ng-click="upvote(comment)"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span></a> <a href="" ng-click="downvote(comment)"><span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span></a><br />
+                    {{comment.text}}
+                </div>
+                <div class="row">
+                    <div class="col-md-9 col-md-offset-3">
+                        <a href="" ng-click="delete(comment)"><small>Delete</small></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="text-center">
+            <hr />
+            <p>
+                T-Schedule is an online scheduling helper that aims to make life easier for Georgia Tech students! <a href="/contact">Contact us!</a>
+            </p>
+        </div>
+    </script>
+
+    <script type="text/ng-template" id="/not-found.ejs">
+        <div class="text-center">
+            <h1>No available course selected!</h1>
+        </div>
+    </script>
 </body>
 </html>
