Make upload picture button match color scheme

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -101,7 +101,7 @@
               <img ng-src="{{photoURL}}" class="avatar img-circle" alt="user image" style="width: 200px; height: 200px">
 			  <label class="btn-upload">
 				<input type="file" name="fileupload" ng-model-instant onchange="angular.element(this).scope().upload_image(event)">
-				<button class="btn">Upload New Image</button>
+				<button class="btn" style="background: #00254c; color: #eeb211">Upload New Image</button>
 			  </label>
             </div>
           </div>
