--- a/views/forum.ejs
+++ b/views/forum.ejs
@@ -59,6 +59,8 @@
 
     <script type="text/ng-template" id="/forum.ejs">
         <div class="container text-center">
+            <br />
+            <a href="#/search">Find another class forum page</a>
             <h1>{{ classInfo.fullname }}</h1>
             <div class="row">
                 <div class="col-md-6">
@@ -126,7 +128,40 @@
 
     <script type="text/ng-template" id="/not-found.ejs">
         <div class="text-center">
-            <h1>No available course selected!</h1>
+            <h1>Pick a course!</h1>
+
+            <div>
+                <select ng-model="school" ng-options="x for x in schools | orderBy: x" ng-change="updateNumbers(school)">
+                    <option value="" disabled selected>Select a Major/School</option>
+                </select>
+            </div>
+            <br />
+            <div ng-show="school && !numbers">
+                <select ng-model="temp" ng-options="x for x in ['Loading...']">
+                    <option value="" disabled selected>Select Course Number</option>
+                </select>
+            </div>
+            <div ng-show="numbers">
+                <select ng-model="number" ng-options="x for x in numbers | orderBy: x | filter: greaterThan('length', 3)">
+                    <option value="" disabled selected>Select Course Number</option>
+                </select>
+            </div>
+            <br />
+            <div ng-show="school && number">
+                <a href="#/{{school}}/{{number}}" class="btn btn-primary" style="background: #00254c; color: #eeb211">Go to the forum page!</a>
+            </div>
+
+            <div class="text-center">
+                <br />
+                <br />
+                <p>
+                    If you can't find the forum page for a class, visit the <a href="/contact">contact us</a> page and let us know!
+                </p>
+                <hr />
+                <p>
+                    T-Schedule is an online scheduling helper that aims to make life easier for Georgia Tech students! <a href="/contact">Contact us!</a>
+                </p>
+            </div>
         </div>
     </script>
 </body>
