--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -101,6 +101,7 @@
             </table>
         </div>
         <div class="col-md-5">
+            Total credit hours: {{credits}}
             <div ng-show="!schedule.length">
                 <div class="alert alert-shrink alert-info" role="alert">No classes picked yet!</div>
             </div>
